--- a/style.sass
+++ b/style.sass
@@ -2,16 +2,8 @@
   background: lightBlue
   .row
     width: 100%
+.h4
+  margin-left: 30px
 
 .container-fluid, .modal-header,.modal-footer
   background: #CDD7FA
-
-.delete-item
-  float: right
-  margin-right: 2px
-  color: #fff
-  padding: 0px 7px
-  background-color: #FC6A6A
-  border-radius: 100%
-  text-decoration: none
-  cursor: pointer
